Added feature for validating the TextBOX Function